package dev.kamal.learnlld.lld2.observer;

public interface Subscriber {
    void update();
}
