classDiagram
    class Publisher{
        <<interface>>
        +subscribe(Subscriber subscriber)
        +unsubscriber(Subscriber subscriber)
        +notifySubscriber()
    }

    class Subscriber{
        <<interface>>
        +update()
    }

    class Amazon {
        - List~Subscriber~ subscribers
    }

    Publisher <|.. Amazon: implements
    Amazon "1" o-- "*" Subscriber: has

    Subscriber <|.. EmailService: implements
    Subscriber <|.. SMSService: implements
    Subscriber <|.. PushNotificationService: implements
    Subscriber <|.. InventoryService: implements